[package]
name = "robust_verifiable_dp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#aptos-crypto = { git ="https://github.com/sourav1547/aptos-core.git",  package ="aptos-crypto", features=["cloneable-private-keys", "fuzzing"]}

blstrs = "0.6.1"
rand = "0.7.3"
rand_core = "0.5.1"
num-integer = "0.1.42"
num-traits = "0.2.11"
num-bigint = { version = "0.3.2", features = ["rand"] } # need this version because it in turn depends on the right version of `rand` and `rand_core`
ff = "0.12.0"
sha3 = "0.10.6"
group = "0.12.1"
once_cell = "1.17.0"
hex = "0.4.3"