[package]
name = "robust_verifiable_dp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ed25519-dalek = { version = "2", features = ["rand_core"] }
curve25519-dalek = "4"

rand = "0.8"
rand_core = "0.6"
num-integer = "0.1.42"
num-traits = "0.2.11"
num-bigint = { version = "0.3.2", features = ["rand"] } # need this version because it in turn depends on the right version of `rand` and `rand_core`
ff = "0.12.0"
sha3 = "0.10.6"
sha2 = "0.9"
group = "0.12.1"
once_cell = "1.17.0"
hex = "0.4.3"
more-asserts = "0.3.1"
serde = {version = "1.0", features = ["derive"]}
bcs = "0.1.6"

[profile.release]
opt-level = 2
lto = true